# SegmentDistance

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
geometry/: CMakeLists.txt
geometry/include/geom/: basic_algorithm.h  basics.h  distance.h  line.h  point.h  sector.h  vector.h
test/: CMakeLists.txt  geom_test.cpp  helloworld.cpp  test_algorithm.h
